--- a/main.tex
+++ b/main.tex
@@ -53,6 +53,7 @@ Accepted March 1, 2009}
 \maketitle
 
 \begin{abstract}
+I added one line.
 I am testing the editing functions in GitHub.
 Virioplankton are major players within oceanic ecosystems, impacting biogeochemical cycling of nutrients and energy.
 Virioplankton can only reproduce themselves through host infection, mostly bacterioplankton, and thus influence marine ecosystems through interactions with bacterioplankton.
