--- a/main.tex
+++ b/main.tex
@@ -53,6 +53,7 @@ Accepted March 1, 2009}
 \maketitle
 
 \begin{abstract}
+This my edit 2.
 This is my edit
 I added one line.
 I am testing the editing functions in GitHub.
